# fanctrl

./: .gitignore  CMakeLists.txt  README.md  build
src/: fanctrl.c
